--- a/environment.yml
+++ b/environment.yml
@@ -21,3 +21,5 @@ dependencies:
       - scipy==1.11.3
       - tensorboard==2.14.1
       - tensorflow==2.14.0
+      - bs4==0.0.2
+      - lxml==5.2.2
